<resources>
    <string name="app_name">Teachers Info</string>
    <string name="about">About Us</string>

    <!--drawer toggle-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="name">Name</string>
    <string name="full_name_hint">Type Your Full Name</string>
    <string name="designation_hint">Example: Associate Professior</string>
    <string name="designation">Designation</string>
    <string name="address">Address</string>
    <string name="address_hint">Type Your Address</string>
    <string name="expertise_in">Expertise In</string>
    <string name="expertise_in_hint">Example: Mathematics</string>
    <string name="email_address">Email Address</string>
    <string name="email_hint">youremail@email.com</string>
    <string name="contact_no">Contact No</string>
    <string name="contact_no_hint">Example: +88 01xxx -xxxxxx</string>
    <string name="enter_details">Enter Details</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="no_teacher_in_list">No teacher in list yet !</string>
    <string name="new_teacher_added_successfully">New teacher added successfully!</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this teacher ?</string>
    <string name="ok">OK</string>
    <string name="teacher_deleted_successfully">Teacher deleted successfully !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_photo">Change Photo</string>
    <string name="update_info">Update Info</string>
    <string name="oner_or_more_fields_are_empty">One or more fields are empty !</string>
    <string name="invalid_email_foramt">Invalid email format !</string>
    <string name="cancel">CANCEL</string>
    <string name="edit_teacher_information">Edit teacher Information</string>
    <string name="info_updated_successully">Info updated successfully !</string>

</resources>
